# InternLM-L1G1-BrowserUse

./: .env.example  .gitignore  Dockerfile  Dockerfile.arm64  README-UV.md  README.md  pyproject.toml  webui.py
dainj/: 1.openai_sdk.py  2.native_sdk.py  3.openai_sdk_multimodal.py
src/agent/: custom_agent.py  custom_message_manager.py  custom_prompts.py  custom_views.py
src/browser/: custom_browser.py
src/controller/: custom_controller.py
src/utils/: deep_research.py  default_config_settings.py  llm.py  utils.py
tests/: test_browser_use.py  test_deep_research.py  test_llm_api.py  test_playwright.py
